Added info and moar css

--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,17 @@
 .Title {
 	font-size: x-large;
-	color: #761c19;
+	color: #C800FF;
 
 
 }
 body {
 	font-size: 24px;
-	color: #ffff00
+	color: #000000
 !important;
 }
 html {
 	margin: auto;
-	font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif !important;
+	font-family: 'Josefin Sans', sans-serif;
 	text-align: center;
 }
 .Header {
