--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body {
 }
 html {
 	margin: auto;
-	font-family: 'Josefin Sans', sans-serif;
+	font-family: Gill Sans, Gill Sans MT, Myriad Pro, DejaVu Sans Condensed, Helvetica, Arial,' sans-serif';
 	text-align: center;
 }
 .Header {
