--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,10 @@ body {
 !important;
 }
 html {
-	margin: auto;
+	margin-top: auto;
+	margin-right: auto;
+	margin-left: auto;
+	margin-bottom: auto;
 	font-family: Gill Sans, Gill Sans MT, Myriad Pro, DejaVu Sans Condensed, Helvetica, Arial,' sans-serif';
 	text-align: center;
 }
@@ -21,4 +24,7 @@ html {
    color: transparent;
 
    text-shadow: 0 0 5px rgba(131,246,228,0.8);
+}
+.404DANGERBUTTON {
+	color: #FFFFFF;
 }
